Fix timestamp drift in CanvasCaptureHandler

This CL addresses possible bot failures such as:
https://build.chromium.org/p/chromium.memory.fyi/builders/Chromium%20OS%20%28valgrind%29%284%29/builds/37386

BUG=594200

Review URL: https://codereview.chromium.org/1782193003

Cr-Commit-Position: refs/heads/master@{#380809}

Former-commit-id: 43b0892d86eb8121861d41056d573b495ef518f3